<resources>
    <string name="app_name">ZeitenMax</string>

    <string-array name="setting_display_mode_options">
        <item>Systemstandard</item>
        <item>Tageslichtmodus</item>
        <item>Dunkelmodus</item>
    </string-array>

    <string name="mode_prompt">Wähle einen Modus aus</string>
    <string name="keinen_standortzugriff">Keinen Standortzugriff !</string>
    <string name="wochentag_tag_monat_jahr">Wochentag. Tag. Monat Jahr</string>
    <string name="land_bundesland_stadt">Land, (Bundesland), Stadt</string>
    <string name="hh_mm_ss_ss">HH:MM:SS.ss</string>
    <string name="popup_inhalt_hier">Popup-Inhalt hier</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbrechen</string>

    <string name="clock_prompt">Wähle eine Region aus</string>
    <string name="neue_uhr_hinzuf_gen">Neue Uhr hinzufügen</string>
    <string name="achtung_du_stehst_kurz_davor_die_uhr_zu_l_schen_m_chtest_du_diesen_vorgang_trotzdem_durchf_hren">Achtung! Du stehst kurz davor, die Uhr zu löschen. Möchtest du diesen Vorgang trotzdem durchführen?</string>
    <string name="l_schen">Löschen</string>
    <string-array name="add_clock_items"></string-array>
</resources>