<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    android:background="?android:attr/selectableItemBackgroundBorderless">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/card_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hh_mm_ss_ss"
            android:textColor="@color/colorBTNForegroundAccent"
            android:textSize="@dimen/clock_card_time_size" />

        <TextView
            android:id="@+id/card_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/land_bundesland_stadt"
            android:gravity="center_horizontal"
            android:textSize="@dimen/clock_card_location_size"
            android:textColor="@color/colorBTNForegroundAccent"/>

        <TextView
            android:id="@+id/card_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wochentag_tag_monat_jahr"
            android:gravity="center_horizontal"
            android:textSize="@dimen/clock_card_date_size"
            android:textColor="@color/colorBTNForegroundAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
