<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBTNBackgroundAccent"
    tools:context=".ClockActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/white"
        android:background="?android:attr/selectableItemBackgroundBorderless">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Uhr löschen"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:autoSizeTextType="uniform"
                    android:textSize="30sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achtung_du_stehst_kurz_davor_die_uhr_zu_l_schen_m_chtest_du_diesen_vorgang_trotzdem_durchf_hren"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:autoSizeTextType="uniform"
                android:textSize="17sp"
                android:ellipsize="end"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_delete_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="5sp"
                    android:layout_marginLeft="20sp"
                    android:text="@string/abbrechen"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/delete_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="5sp"
                    android:text="@string/l_schen"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>