<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBTNBackgroundAccent"
    tools:context=".ClockActivity">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/settings_title"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:text="Uhr"
            android:textColor="@color/colorBTNForegroundAccent"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/add_new_clock"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:text="Hinzufügen  "
            android:textSize="15sp"
            android:drawableRight="@drawable/baseline_add_circle_24"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/localTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hh_mm_ss_ss"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/clock_time_size"
                    android:textColor="@color/colorBTNForegroundAccent"/>

                <TextView
                    android:id="@id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/land_bundesland_stadt"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/clock_location_size"
                    android:textColor="@color/colorBTNForegroundAccent"/>

                <TextView
                    android:id="@+id/localDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wochentag_tag_monat_jahr"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/clock_date_size"
                    android:textColor="@color/colorBTNForegroundAccent"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray"/>

            <!-- CardView Template -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/white"
                android:background="?android:attr/selectableItemBackgroundBorderless">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hh_mm_ss_ss"
                        android:textColor="@color/colorBTNForegroundAccent"
                        android:textSize="@dimen/clock_card_time_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/land_bundesland_stadt"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/clock_card_location_size"
                        android:textColor="@color/colorBTNForegroundAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wochentag_tag_monat_jahr"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/clock_card_date_size"
                        android:textColor="@color/colorBTNForegroundAccent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:paddingRight="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/alarm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="@dimen/taskbar_button_height"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/taskbar_button_text_size"
                android:background="@color/colorBTNBackgroundAccent"
                android:icon="@drawable/baseline_alarm_24">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/clock"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="@dimen/taskbar_button_height"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/taskbar_button_text_size"
                android:background="@color/colorBTNBackgroundAccent"
                android:icon="@drawable/baseline_access_time_24">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/timer"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="@dimen/taskbar_button_height"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/taskbar_button_text_size"
                android:background="@color/colorBTNBackgroundAccent"
                android:icon="@drawable/baseline_hourglass_empty_24">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/stopwatch"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taskbar_button_height"
                android:layout_weight="1"
                android:background="@color/colorBTNBackgroundAccent"
                android:icon="@drawable/baseline_access_time_24"
                android:textSize="@dimen/taskbar_button_text_size">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/settings"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taskbar_button_height"
                android:layout_weight="0"
                android:textSize="@dimen/taskbar_button_text_size"
                android:background="@color/colorBTNBackgroundAccent"
                android:icon="@drawable/baseline_settings_24">
            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>
</RelativeLayout>